--- a/lp-1/assets/scss/Pages/_index.scss
+++ b/lp-1/assets/scss/Pages/_index.scss
@@ -445,9 +445,12 @@ main#main {
             height: auto;
           }
         }
+        .red-taxi:hover {
+          background-color: #93d7dc;
+        } 
         .black-taxi {
           display: flex;
-          flex-direction: column;
+          flex-direction: column; 
           align-items: center;
           cursor: pointer;
           justify-content: center;
@@ -462,6 +465,9 @@ main#main {
             height: auto;
           }
         }
+        .black-taxi:hover {
+          background-color: #93d7dc;
+        }
       }
       .no-license {
         gap: 20px;
@@ -475,6 +481,9 @@ main#main {
         border-radius: 5px;
         border: 1px solid gray;
         box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+      }
+      .no-license:hover {
+        background-color: #93d7dc;
       }
       .next-img-second {
         width: 60px;
@@ -495,6 +504,33 @@ main#main {
         to {
           right: 22px;
         }
+      }
+    }
+    .next-second {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top: 2px solid black;
+      height: 70px;
+      .next-button {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+        color: white;
+        width: 290px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        align-items: center;
+        background-color: #0d8ea3;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .next-button:hover {
+        background-color: #93d7dc;
+      }
+      .next-button:active {
+        background-color: #6e6f71;
       }
     }
   }
@@ -558,6 +594,12 @@ main#main {
             font-weight: bold;
           }
         }
+        .third-cycle:hover {
+          background-color: #93d7dc; 
+        }
+        .third-three:hover {
+          background-color: #93d7dc; 
+        }
         .next-img-third {
           width: 60px;
           position: absolute;
@@ -607,6 +649,33 @@ main#main {
 
           font-weight: bold;
         }
+      }
+    }
+    .next-third {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top: 2px solid black;
+      height: 70px;
+      .next-button {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+        color: white;
+        width: 290px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        align-items: center;
+        background-color: #0d8ea3;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .next-button:hover {
+        background-color: #93d7dc; 
+      }
+      .next-button:active {
+        background-color: #6e6f71;
       }
     }
   }
@@ -913,11 +982,10 @@ main#main {
     .six-input {
       display: flex;
       justify-content: center;
-      padding-bottom: 20px;
-      border-bottom: 2px solid black;
+      padding-top: 20px;
       flex-direction: column;
       .custom-input-one {
-        width: 180px;
+        width: 320px;
         border: 1px solid gray;
         line-height: 12px;
         height: 36px;
@@ -987,7 +1055,8 @@ main#main {
     .nearest-station {
       display: flex;
       justify-content: center;
-      padding-bottom: 5px;
+      padding-bottom: 25px;
+      border-bottom: 2px black solid;
       .custom-input {
         width: 320px;
         border: 1px solid gray;
@@ -1511,5 +1580,40 @@ main#main {
         cursor: pointer;
       }
     }
+  }
+}
+.thanks {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+  text-align: center;
+  height: 100vh;
+  background-color:#fefff2;
+  h2 {
+    font-size: 6.4rem;
+    color: #0d7e91;
+    span {
+      font-size: 4.8rem;
+    }
+  }
+  .goTop {
+    font-size: 2.4rem;
+    width: 320px;
+    height: 44px;
+    background-color: #0d8ea3;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;  
+    align-items: center;
+    color: white;
+  }
+  .goTop:hover {
+    background-color: darkcyan;
+
+  }
+  .goTop:active {
+    background-color:rgb(5, 116, 70);
   }
 }
