--- a/lp-1/assets/scss/Pages/_index.scss
+++ b/lp-1/assets/scss/Pages/_index.scss
@@ -1113,6 +1113,33 @@ main#main {
         }
       }
     }
+    .next-six {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top: 2px solid black;
+      height: 70px;
+      .next-button {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+        color: white;
+        width: 290px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        align-items: center;
+        background-color: #0d8ea3;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .next-button:hover {
+        background-color: #93d7dc;
+      }
+      .next-button:active {
+        background-color: #6e6f71;
+      }
+    }
   }
   .seven {
     display: none;
