--- a/css/style_registration.scss
+++ b/css/style_registration.scss
@@ -1,5 +1,5 @@
 .registration-form {
-  font-family: 'Noto Sans jp';
+  font-family: "Noto Sans jp";
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +45,7 @@
 
       label.optional {
         &::after {
-          content: 'Optional';
+          content: "任意";
           color: white;
           background-color: rgb(96, 125, 139);
           padding: 1px 2px;
@@ -58,7 +58,7 @@
       }
       label.required {
         &::after {
-          content: 'Required';
+          content: "必須";
           color: white;
           background-color: rgb(244, 67, 54);
           padding: 1px 2px;
@@ -83,7 +83,7 @@
         gap: 10px;
       }
       .form-check {
-        border: 1px solid rgba(0,0,0,0.15);
+        border: 1px solid rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         padding: 8px;
 
@@ -99,7 +99,8 @@
         color: rgb(0, 0, 0);
         border-color: rgb(217, 217, 217);
         background-color: rgb(255, 255, 255);
-        font-weight: 400; font-size: 16px;
+        font-weight: 400;
+        font-size: 16px;
       }
     }
     .item-privacy {
@@ -111,12 +112,113 @@
   }
 
   .action {
+    margin-top: 40px;
+
     button {
       padding: 10px 0;
     }
+  }
+
+  .danger {
+    background-color: rgba(253, 217, 215, 1) !important;
+    border-color: rgba(217, 83, 79, 1) !important;
+  }
+
+  .next {
+    border-color: rgb(251, 151, 25);
+    background-color: rgb(251, 151, 25);
+    color: rgb(255, 255, 255);
+    font-weight: 400;
+    font-size: 20px;
+    height: 44px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .back {
+    font-weight: 400;
+    font-size: 20px;
+    border-color: #90a5af;
+    background: #fff;
+    color: #7b919c;
+    margin-top: 10px;
+    height: 44px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bg-warning {
+    background-color: rgb(251, 151, 25) !important;
+  }
+
+  .pro-bar {
+    margin-top: 40px;
+    display: flex;
+    height: 16px;
+    width: 100%;
+  }
+
+  .progress {
+    width: 86%;
+    height: 100%;
+    border-radius: 50px;
+    background-color: #cfd8dc;
+    margin: 5px 0;
+    overflow: hidden;
+  }
+
+  .pro-num {
+    color: rgb(251, 151, 25);
+    font-weight: 1000;
+  }
+
+  input::placeholder {
+    font-size: 16px;
+  }
+
+  select {
+    height: 37px;
+  }
+
+  select option {
+    font-size: 16px;
+  }
+
+  .warning {
+    background-color: #f2dede;
+    border-color: #ebcccc;
+    color: #a94442;
+    padding: 0.75rem 1.25rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    line-height: 165%;
+    height: 52px;
+    display: flex;
+    align-items: center;
+  }
+
+  #regex,
+  #please_enter_age,
+  #please_enter_firstname,
+  #please_enter_lastname,
+  #please_enter_phonenumber,
+  #please_enter_privacy,
+  #valid_email {
+    color: #d9534f;
   }
 }
 
 .form-control {
   padding: 10px !important;
+}
+
+input,
+select {
+  font-size: 16px !important;
 }
