--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -1,6 +1,6 @@
 .contact {
   width: 100%;
-  padding-left: 40px;
+  padding-left: 300px;
   padding-right: 40px;
   margin-bottom: 80px;
   display: flex;
@@ -100,5 +100,9 @@
 }
 .contact #regex {
   color: red;
+  margin-top: 10px;
+}
+.contact #valid_email {
+  color: #d9534f;
   margin-top: 10px;
 }/*# sourceMappingURL=style_contact.css.map */
