--- a/lp-1/assets/scss/Pages/_index.scss
+++ b/lp-1/assets/scss/Pages/_index.scss
@@ -269,7 +269,7 @@ main#main {
       .step-car {
         position: absolute;
         top: 42px;
-        left: 25px;
+        left: 20px;
         z-index: 10;
         width: 30px;
         height: auto;
@@ -279,7 +279,7 @@ main#main {
       }
       .step-text {
         display: flex;
-        gap: 12px;
+        gap: 10px;
         justify-content: center;
         p {
           font-size: 9px;
@@ -308,7 +308,7 @@ main#main {
       .step-road {
         .road-bar {
           background-color: #d9d9d9;
-          width: 300px;
+          width: 328px;
           height: 3px;
           margin-top: 17px;
           margin-left: auto;
@@ -323,7 +323,7 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 34px;
+          left: 24px;
         }
         .span-round2 {
           border-radius: 50%;
@@ -333,7 +333,7 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 84px;
+          left: 70px;
         }
         .span-round3 {
           border-radius: 50%;
@@ -343,7 +343,7 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 134px;
+          left: 117px;
         }
         .span-round4 {
           border-radius: 50%;
@@ -353,7 +353,7 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 184px;
+          left: 164px;
         }
         .span-round5 {
           border-radius: 50%;
@@ -363,7 +363,7 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 234px;
+          left: 211px;
         }
         .span-round6 {
           border-radius: 50%;
@@ -373,7 +373,7 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 284px;
+          left: 258px;
         }
         .span-round7 {
           border-radius: 50%;
@@ -383,7 +383,17 @@ main#main {
           display: flex;
           position: absolute;
           top: 53px;
-          left: 334px;
+          left: 305px;
+        }
+        .span-round8{
+          border-radius: 50%;
+          width: 10px;
+          height: 10px;
+          background-color: #d9d9d9;
+          display: flex;
+          position: absolute;
+          top: 53px;
+          left: 351px;
         }
       }
     }
@@ -447,10 +457,10 @@ main#main {
         }
         .red-taxi:hover {
           background-color: #93d7dc;
-        } 
+        }
         .black-taxi {
           display: flex;
-          flex-direction: column; 
+          flex-direction: column;
           align-items: center;
           cursor: pointer;
           justify-content: center;
@@ -546,7 +556,7 @@ main#main {
     .step-car-third {
       position: absolute;
       top: 42px;
-      left: 72px;
+      left: 65px;
       z-index: 10;
       width: 30px;
       height: auto;
@@ -595,10 +605,10 @@ main#main {
           }
         }
         .third-cycle:hover {
-          background-color: #93d7dc; 
+          background-color: #93d7dc;
         }
         .third-three:hover {
-          background-color: #93d7dc; 
+          background-color: #93d7dc;
         }
         .next-img-third {
           width: 60px;
@@ -672,7 +682,7 @@ main#main {
         transition: 0.3s;
       }
       .next-button:hover {
-        background-color: #93d7dc; 
+        background-color: #93d7dc;
       }
       .next-button:active {
         background-color: #6e6f71;
@@ -690,7 +700,7 @@ main#main {
     .step-car-four {
       position: absolute;
       top: 42px;
-      left: 121px;
+      left: 110px;
       z-index: 10;
       width: 30px;
       height: auto;
@@ -794,7 +804,7 @@ main#main {
     .step-car-five {
       position: absolute;
       top: 42px;
-      left: 170px;
+      left: 155px;
       z-index: 10;
       width: 30px;
       height: auto;
@@ -856,6 +866,9 @@ main#main {
   }
   overflow-y: scroll;
   height: 600px;
+
+ 
+
   .sixth {
     display: none;
     width: 375px;
@@ -872,7 +885,7 @@ main#main {
     .step-car-six {
       position: absolute;
       top: 42px;
-      left: 225px;
+      left: 200px;
       z-index: 10;
       width: 30px;
       height: auto;
@@ -979,6 +992,171 @@ main#main {
         }
       }
     }
+  
+    .nearest-station {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 25px;
+      border-bottom: 2px black solid;
+      .custom-input {
+        width: 320px;
+        border: 1px solid gray;
+        line-height: 12px;
+        height: 36px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 5px;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+      }
+    }
+    .nearest-description {
+      margin-top: 30px;
+      margin-bottom: 30px;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      padding-bottom: 8px;
+      .common-img {
+        width: 35px;
+        img {
+          width: 100%;
+        }
+      }
+      .common-des {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: -3px;
+        .description-triangle {
+          width: 0px;
+          height: 0px;
+          border-style: solid;
+          border-width: 8px 15px 8px 0;
+          border-color: transparent #93d7dccc transparent transparent;
+          transform: rotate(0deg);
+        }
+        .description-text {
+          padding: 8px;
+          background-color: #93d7dccc;
+          font-weight: bold;
+          border-radius: 5px;
+          width: 280px;
+          height: 65px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-family: Inter;
+          font-size: 13px;
+          font-weight: 500;
+          line-height: 18px;
+          text-align: left;
+          color: #1e1e1e;
+        }
+      }
+    }
+    .next-six {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top: 2px solid black;
+      height: 70px;
+      gap: 10px;
+      .next-button {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+        color: white;
+        width: 140px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        align-items: center;
+        background-color: #0d8ea3;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .next-button:hover {
+        background-color: #93d7dc;
+      }
+      .next-button:active {
+        background-color: #6e6f71;
+      }
+    }
+  }
+
+  .newstep {
+    display: none;
+    width: 375px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    position: relative;
+    background-color: rgba($color: white, $alpha: 0.8);
+    .common-title-five {
+      font-family: Inter;
+      margin-top: 16px;
+      display: flex;
+      justify-content: flex-start;
+      margin-left: 15px;
+      gap: 4px;
+      align-items: flex-start;
+      span {
+        width: 12px;
+        height: 12px;
+        background-color: #93d7dc;
+        margin-top: 5px;
+      }
+      .five-title {
+        font-family: Inter;
+        font-size: 15px;
+        font-weight: 600;
+        line-height: 22px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        color: #1e1e1e;
+        margin: 0;
+      }
+      .common-text {
+        font-family: Inter;
+        font-size: 12px;
+        font-weight: 600;
+        line-height: 18px;
+        letter-spacing: 0.02em;
+        text-align: left;
+        margin-left: 12px;
+      }
+    }
+    .next-img-newstep {
+      width: 60px;
+      position: absolute;
+      right: 8px;
+      top: 165px;
+      transition: top 0.5s ease;
+      z-index: 3;
+      animation: moveSideways 0.7s infinite alternate;
+      img {
+        width: 100%;
+      }
+    }
+    @keyframes moveSideways {
+      from {
+        right: 8px;
+      }
+      to {
+        right: 22px;
+      }
+    }
+    .step-car-newstep {
+      position: absolute;
+      top: 42px;
+      left: 245px;
+      z-index: 10;
+      width: 30px;
+      height: auto;
+      img {
+        width: 100%;
+      }
+    }
     .six-input {
       display: flex;
       justify-content: center;
@@ -1052,22 +1230,6 @@ main#main {
         display: none;
       }
     }
-    .nearest-station {
-      display: flex;
-      justify-content: center;
-      padding-bottom: 25px;
-      border-bottom: 2px black solid;
-      .custom-input {
-        width: 320px;
-        border: 1px solid gray;
-        line-height: 12px;
-        height: 36px;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 5px;
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
-      }
-    }
     .nearest-description {
       margin-top: 30px;
       margin-bottom: 30px;
@@ -1113,8 +1275,10 @@ main#main {
         }
       }
     }
-    .next-six {
+    .next-newstep {
+
       display: flex;
+      margin-top: 3rem;
       justify-content: center;
       align-items: center;
       border-top: 2px solid black;
@@ -1156,8 +1320,8 @@ main#main {
     margin-bottom: 20px;
     .step-car-seven {
       position: absolute;
-      top: 44px;
-      left: 277px;
+      top: 42px;
+      left: 295px;
       z-index: 10;
       width: 30px;
       height: auto;
@@ -1292,8 +1456,8 @@ main#main {
     margin-bottom: 20px;
     .step-car-last {
       position: absolute;
-      top: 44px;
-      left: 320px;
+      top: 42px;
+      left: 340px;
       z-index: 10;
       width: 30px;
       height: auto;
@@ -1511,7 +1675,6 @@ main#main {
       .next-btns {
         display: flex;
       }
-   
     }
     .next-seven-img {
       width: 60px;
@@ -1562,8 +1725,8 @@ main#main {
       text-align: center;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        position: relative;
-        transition: 1s;
+      position: relative;
+      transition: 1s;
       .modal-congrate {
         display: flex;
         justify-content: center;
@@ -1588,7 +1751,6 @@ main#main {
         border-radius: 5px;
         cursor: pointer;
         transition: 0.3s;
-
       }
       .close-button {
         color: #aaa;
@@ -1617,7 +1779,7 @@ main#main {
   gap: 10rem;
   text-align: center;
   height: 100vh;
-  background-color:#fefff2;
+  background-color: #fefff2;
   h2 {
     font-size: 6.4rem;
     color: #0d7e91;
@@ -1632,15 +1794,14 @@ main#main {
     background-color: #0d8ea3;
     border-radius: 5px;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
     align-items: center;
     color: white;
   }
   .goTop:hover {
     background-color: darkcyan;
-
   }
   .goTop:active {
-    background-color:rgb(5, 116, 70);
+    background-color: rgb(5, 116, 70);
   }
 }
