--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -2770,10 +2770,12 @@ figure img,
 }
 .header-logo img {
   width: 140px;
+  height: 12px;
 }
 @media only screen and (max-width: 640px) {
   .header-logo img {
     width: 20rem;
+    height: 1.5rem;
   }
 }
 .header-bottom {
@@ -4283,7 +4285,6 @@ main#main .seven {
   width: 375px;
   overflow-y: visible;
   z-index: 10;
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
