--- a/lp-1/assets/scss/Pages/_index.scss
+++ b/lp-1/assets/scss/Pages/_index.scss
@@ -1288,15 +1288,15 @@ main#main {
     .next-newstep {
 
       display: flex;
-      margin-top: 3rem;
       justify-content: center;
       align-items: center;
       border-top: 2px solid black;
       height: 70px;
+      gap: 10px;
       .next-button {
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
         color: white;
-        width: 290px;
+        width: 140px;
         height: 35px;
         display: flex;
         justify-content: center;
